Prevent Item title overflow

--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,10 @@ button:focus {
 }
 
 .card-title {
-  /* line-height: 3em; */
+  line-height: 1em;
   /* height: 10em;  */
-  /* overflow: hidden;  */
-  height: 38px;
+  overflow: hidden; 
+  height: 34px;
   word-break:break-word !important;
 }
 
